# api.yaml
@@ -27,10 +27,34 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/User"
+              type: "object"
+              title: "CreateUserObject"
+              required:
+                - name
+                - username
+                - ssn
+                - accountType
+              properties:
+                name:
+                  type: "string"
+                username:
+                  type: "string"
+                password:
+                  type: "string"
+                  format: "password"
+                ssn:
+                  type: "string"
+                accountType:
+                  $ref: '#/components/schemas/AccountType'
       responses:
-        default:
+        200:
           description: "successful operation"
+          content:
+            application/json:
+              schema:
+                type: "array"
+                items:
+                  $ref: "#/components/schemas/User"
     get:
       tags:
       - "user"
